# local-voice-ai

./: .env  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: app-config.ts  package.json  pnpm-lock.yaml
frontend/components/app/: agent-character.tsx  app.tsx  balloon-field.tsx  parent-panel.tsx  session-view.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/livekit/agent-control-bar/: agent-control-bar.tsx
frontend/hooks/: useStackStatus.ts
frontend/lib/: characters.ts
local_voice_ai/: __main__.py  agent.py  api.py  characters.py  config.py  parent_settings.py
local_voice_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
local_voice_ai/caddy/: Caddyfile
local_voice_ai/services/indic_tts/: server.py
story_teller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py
